@@ -1,6 +1,9 @@
 # ChangeLog for dev-tex/prosper
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/prosper/ChangeLog,v 1.18 2007/03/13 00:34:40 nattfodd Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/prosper/ChangeLog,v 1.19 2008/02/05 20:32:02 grobian Exp $
+
+  05 Feb 2008; Fabian Groffen <grobian@gentoo.org> prosper-1.5-r1.ebuild:
+  Dropped ppc-macos keyword, see you in prefix
 
   12 Mar 2007; Alexandre Buisse <nattfodd@gentoo.org> metadata.xml:
   Replaced text-markup by tex as maintaining herd (text-markup split).
