@@ -1,6 +1,9 @@
 # ChangeLog for dev-tex/g-brief
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/g-brief/ChangeLog,v 1.11 2007/03/13 00:21:11 nattfodd Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/g-brief/ChangeLog,v 1.12 2008/02/05 20:29:27 grobian Exp $
+
+  05 Feb 2008; Fabian Groffen <grobian@gentoo.org> g-brief-4.0.1.ebuild:
+  Dropped ppc-macos keyword, see you in prefix
 
   12 Mar 2007; Alexandre Buisse <nattfodd@gentoo.org> metadata.xml:
   Replaced text-markup by tex as maintaining herd (text-markup split).
